Course listing and joining for them. Adding new lesson and them listing. Add disqus comment service for lessons. Button edit.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -135,3 +135,11 @@ i#done, .fa-remove:hover {
 .show {
     display: block !important;
 }
+
+.margin-bottom {
+    margin-bottom: 25px;
+}
+
+.padding-top {
+    padding-top: 25px;
+}
