Fix title, add author meta. Change some style in register form and add auth scripts to gulpfile.

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -223,4 +223,9 @@ textarea {
     margin: 0;
 }
 
+.auth-error {
+    color: #fff;
+    font-size: 18px;
+}
+
 /* -- END MAIN REGISTRATION/LOGIN FORM -- */
