--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,6 +162,14 @@ i#done, .fa-remove:hover {
     margin-top: 5px;
 }
 
+.full-width {
+    width: 100% !important;
+}
+
+#mark-chart {
+    height: 500px !important;
+}
+
 .no-border-radius {
     -webkit-border-radius:0 !important;
     -moz-border-radius:0 !important;
